<resources>
    <string name="app_name">BookHub</string>
    <string name="home">Home</string>
    <string name="popular">Popular</string>
    <string name="wishlist">Wishlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">More</string>
    <string name="sort_by">Sort By</string>
    <string name="search_book_or_author">search book or author..</string>
    <string name="author">Author</string>
    <string name="bookmark">Bookmark</string>
    <string name="remove">Remove</string>
    <string name="your_favorite_books">Your favorite books</string>
    <string name="info">Info</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="unable_to_connect_server_please_try_again">Unable to connect Server, please try again</string>
    <string name="oops">Oops</string>
    <string name="please_try_again_to_search_favorite_books">Please try again to search favorite books</string>
    <string name="no_data_found">No Data found</string>
    <string name="we_are_loading_something_for_you">we are loading something for you</string>
    <string name="please_wait">Please wait</string>
</resources>