<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/nav_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/nav_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_bookmarks"
        android:icon="@drawable/nav_wishlist"
        android:title="@string/wishlist"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/nav_info"
        android:title="@string/info"
        app:showAsAction="ifRoom"/>

</menu>