<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.main.fragments.SearchFragment">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="6dp">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="18dp"
            android:layout_toStartOf="@+id/btnOpenSearch"
            android:maxLines="1"
            android:textColor="@color/grey"
            android:ellipsize="end"/>


        <ImageView
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:padding="12dp"
            android:layout_centerVertical="true"
            android:src="@drawable/search"
            android:layout_alignParentEnd="true"
            android:id="@+id/btnOpenSearch"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            app:tint="@color/black" />

        <RelativeLayout
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginStart="-24dp"
                android:layout_width="62dp"
                android:layout_height="42dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="18dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_round_close_24"
                android:layout_alignParentEnd="true"
                android:background="@drawable/rounded_corners"
                android:id="@+id/btnClear"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                app:tint="@color/white" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toStartOf="@+id/btnClear"
                android:background="@drawable/rounded_stroke"
                android:ellipsize="end"
                android:hint="@string/search_book_or_author"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:imeOptions="actionSearch"
                android:textSize="18sp" />



        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.flexbox.FlexboxLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar"
        android:paddingHorizontal="16dp"
        android:paddingVertical="5dp"
        app:flexDirection="row"
        app:justifyContent="space_between"
        app:alignContent="flex_start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            app:layout_flexBasisPercent="55%"
            android:text="@string/sort_by"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/btnAuthor"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ink_pen"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/author"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/btnAlphabetically"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/sort"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="Asc/Des"/>

        </LinearLayout>


    </com.google.android.flexbox.FlexboxLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBooks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/item_book_card_wide"/>

    </RelativeLayout>

</LinearLayout>